// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Progress examples NovaCompletedProgressBarProgressComponent should render correctly 1`] = `
<div>
  <progress
    class="v-progress v-progress-bar v-progress-complete v-mb-8"
    determinate=""
    id="progress-bar-complete"
    max="100"
    percentage="100"
    v-progress-complete=""
    v-progress-linear=""
    value="100"
    vmb="8"
  />
  <label
    class="v-progress-label"
    for="progress-bar-complete"
    id="a-v-label-0"
    progresslabel=""
    v-label=""
  >
    <span
      class="v-gap-4 v-flex v-flex-row"
      role="alert"
      vflex=""
      vgap="4"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-success v-icon-tiny v-icon-visa"
        focusable="false"
        height="16"
        v-icon-visa-success-tiny=""
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          class="v-icon-secondary"
          d="M8 0C9.30716 0 10.5403 0.315171 11.6299 0.871094L10.1162 2.38477C9.45802 2.13659 8.74502 2 8 2C4.68629 2 2 4.68629 2 8C2 11.3137 4.68629 14 8 14C11.3137 14 14 11.3137 14 8C14 7.78891 13.9881 7.58047 13.9668 7.375L15.6768 5.75C15.8857 6.46393 16 7.21854 16 8C16 12.4183 12.4183 16 8 16C3.58172 16 0 12.4183 0 8C0 3.58172 3.58172 0 8 0Z"
        />
        <path
          class="v-icon-primary"
          d="M15 3.46582L7.72852 10.9961L5 8.18262L6.42578 6.71289L7.72852 8.05664L13.5742 1.99609L15 3.46582Z"
        />
      </svg>
       File is now uploaded 
    </span>
    <span>
      100%
    </span>
  </label>
</div>
`;

exports[`Progress examples NovaCustomLinearProgressComponent should render correctly 1`] = `
<div>
  
  <div
    class="v-gap-12 v-flex v-flex-row v-mt-12"
    vflex=""
    vgap="12"
    vmt="12"
  >
    <button
      class="v-button"
      type="button"
      v-button=""
    >
      Start
    </button>
    <button
      buttoncolor="secondary"
      class="v-button v-button-secondary"
      type="button"
      v-button=""
    >
      Reset
    </button>
    <button
      buttoncolor="secondary"
      class="v-button v-button-secondary"
      type="button"
      v-button=""
    >
      
      <svg
        aria-hidden="true"
        class="v-icon v-icon-media-pause-alt v-icon-tiny v-icon-visa"
        focusable="false"
        height="16"
        v-icon-visa-media-pause-alt-tiny=""
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          class="v-icon-secondary"
          d="M8 0C12.4183 0 16 3.58172 16 8C16 12.4183 12.4183 16 8 16C3.58172 16 0 12.4183 0 8C0 3.58172 3.58172 0 8 0ZM8 2C4.68629 2 2 4.68629 2 8C2 11.3137 4.68629 14 8 14C11.3137 14 14 11.3137 14 8C14 4.68629 11.3137 2 8 2Z"
        />
        <path
          class="v-icon-primary"
          d="M7 11H5V5H7V11ZM11 11H9V5H11V11Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
      
       Pause 
    </button>
  </div>
</div>
`;

exports[`Progress examples NovaCustomSizeCircularProgressComponent should render correctly 1`] = `
<div>
  
  <div
    class="v-gap-12 v-flex v-flex-row v-mt-12"
    vflex=""
    vgap="12"
    vmt="12"
  >
    <button
      class="v-button"
      type="button"
      v-button=""
    >
      Start
    </button>
    <button
      buttoncolor="secondary"
      class="v-button v-button-secondary"
      type="button"
      v-button=""
    >
      Reset
    </button>
    <button
      buttoncolor="secondary"
      class="v-button v-button-secondary"
      type="button"
      v-button=""
    >
      
      <svg
        aria-hidden="true"
        class="v-icon v-icon-media-pause-alt v-icon-tiny v-icon-visa"
        focusable="false"
        height="16"
        v-icon-visa-media-pause-alt-tiny=""
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          class="v-icon-secondary"
          d="M8 0C12.4183 0 16 3.58172 16 8C16 12.4183 12.4183 16 8 16C3.58172 16 0 12.4183 0 8C0 3.58172 3.58172 0 8 0ZM8 2C4.68629 2 2 4.68629 2 8C2 11.3137 4.68629 14 8 14C11.3137 14 14 11.3137 14 8C14 4.68629 11.3137 2 8 2Z"
        />
        <path
          class="v-icon-primary"
          d="M7 11H5V5H7V11ZM11 11H9V5H11V11Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
      
       Pause 
    </button>
  </div>
</div>
`;

exports[`Progress examples NovaCustomSlowCircularProgressComponent should render correctly 1`] = `
<div>
  
  <div
    class="v-gap-12 v-flex v-flex-row v-mt-12"
    vflex=""
    vgap="12"
    vmt="12"
  >
    <button
      class="v-button"
      type="button"
      v-button=""
    >
      Start
    </button>
    <button
      buttoncolor="secondary"
      class="v-button v-button-secondary"
      type="button"
      v-button=""
    >
      Reset
    </button>
    <button
      buttoncolor="secondary"
      class="v-button v-button-secondary"
      type="button"
      v-button=""
    >
      
      <svg
        aria-hidden="true"
        class="v-icon v-icon-media-pause-alt v-icon-tiny v-icon-visa"
        focusable="false"
        height="16"
        v-icon-visa-media-pause-alt-tiny=""
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          class="v-icon-secondary"
          d="M8 0C12.4183 0 16 3.58172 16 8C16 12.4183 12.4183 16 8 16C3.58172 16 0 12.4183 0 8C0 3.58172 3.58172 0 8 0ZM8 2C4.68629 2 2 4.68629 2 8C2 11.3137 4.68629 14 8 14C11.3137 14 14 11.3137 14 8C14 4.68629 11.3137 2 8 2Z"
        />
        <path
          class="v-icon-primary"
          d="M7 11H5V5H7V11ZM11 11H9V5H11V11Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
      
       Pause 
    </button>
  </div>
</div>
`;

exports[`Progress examples NovaDeterminateCircularProgressCompletedComponent should render correctly 1`] = `
<div>
  <div
    aria-labelledby="completed-circular completed-circular-sr-msg"
    aria-valuenow="100"
    class="v-progress v-progress-circular v-progress-complete"
    determinate=""
    percentage="100"
    role="progressbar"
    v-progress-circular=""
  >
    <svg
      class="v-progress-circular-track v-progress-complete"
    >
      <circle
        class="v-progress-circular-background"
      />
      <circle
        class="v-progress-circular-bar"
        style="stroke-dasharray: 213.62830044410595; stroke-dashoffset: 0;"
      />
    </svg>
    <div
      class="v-progress-label v-typography-body-2-bold"
      id="completed-circular"
      v-label=""
      vtypography="body-2-bold"
    >
      100%
    </div>
  </div>
  <span
    class="v-sr"
    id="completed-circular-sr-msg"
    role="alert"
    vsr=""
  >
    Loading complete
  </span>
</div>
`;

exports[`Progress examples NovaDeterminateCircularProgressComponent should render correctly 1`] = `
<div>
  <div
    aria-labelledby="progress-large-circular-percentage"
    aria-valuenow="0"
    class="v-progress v-progress-circular"
    determinate=""
    role="progressbar"
    v-progress-circular=""
  >
    <svg
      class="v-progress-circular-track"
    >
      <circle
        class="v-progress-circular-background"
      />
      <circle
        class="v-progress-circular-bar"
        style="stroke-dasharray: 213.62830044410595; stroke-dashoffset: 213.62830044410595;"
      />
    </svg>
    <div
      class="v-progress-label v-typography-body-2-bold"
      id="progress-large-circular-percentage"
      v-label=""
      vtypography="body-2-bold"
    >
      0%
    </div>
  </div>
  <span
    class="v-sr"
    role="alert"
    vsr=""
  >
    
  </span>
  <div
    class="v-gap-12 v-flex v-flex-row v-mt-12"
    vflex=""
    vgap="12"
    vmt="12"
  >
    <button
      class="v-button"
      type="button"
      v-button=""
    >
      Start
    </button>
    <button
      buttoncolor="secondary"
      class="v-button v-button-secondary"
      type="button"
      v-button=""
    >
      Reset
    </button>
  </div>
</div>
`;

exports[`Progress examples NovaDeterminateCircularSmallProgressComponent should render correctly 1`] = `
<div>
  <div
    aria-labelledby="small-circular-determinate-percentage small-circular-determinate-sr-msg"
    aria-valuenow="83"
    class="v-progress v-progress-circular v-progress-circular-small"
    determinate=""
    percentage="83"
    role="progressbar"
    small=""
    v-progress-circular=""
  >
    <svg
      class="v-progress-circular-track"
    >
      <circle
        class="v-progress-circular-background"
      />
      <circle
        class="v-progress-circular-bar"
        style="stroke-dasharray: 138.23007675795088; stroke-dashoffset: 23.49911304885164;"
      />
    </svg>
    <div
      class="v-progress-label v-typography-body-2-bold"
      id="small-circular-determinate-percentage"
      v-label=""
      vtypography="body-2-bold"
    >
      83%
    </div>
    <span
      class="v-sr"
      id="small-circular-determinate-sr-msg"
      role="alert"
      vsr=""
    >
      Loading...
    </span>
  </div>
</div>
`;

exports[`Progress examples NovaDeterminateProgressBarNoLabelProgressComponent should render correctly 1`] = `
<div>
  <progress
    class="v-progress v-progress-bar v-mb-8"
    determinate=""
    id="progress-bar-determinate-no-label"
    max="100"
    v-progress-linear=""
    value="0"
  />
  <label
    class="v-progress-label"
    for="progress-bar-determinate-no-label"
    id="a-v-label-0"
    progresslabel=""
    v-label=""
  >
    <span>
      0%
    </span>
    <span
      class="v-sr"
      role="alert"
      vsr=""
    >
      
    </span>
  </label>
  <div
    class="v-gap-12 v-flex v-flex-row v-mt-12"
    vflex=""
    vgap="12"
    vmt="12"
  >
    <button
      class="v-button"
      type="button"
      v-button=""
    >
      Start
    </button>
    <button
      buttoncolor="secondary"
      class="v-button v-button-secondary"
      type="button"
      v-button=""
    >
      Reset
    </button>
  </div>
</div>
`;

exports[`Progress examples NovaDeterminateProgressBarProgressComponent should render correctly 1`] = `
<div>
  <progress
    class="v-progress v-progress-bar v-mb-8"
    determinate=""
    id="progress-bar-determinate"
    max="100"
    v-progress-linear=""
    value="15"
  />
  <label
    class="v-progress-label"
    for="progress-bar-determinate"
    id="a-v-label-0"
    progresslabel=""
    v-label=""
  >
    <span>
      filename.jpg
    </span>
    <span>
      15%
    </span>
    <span
      class="v-sr"
      role="alert"
      vsr=""
    >
      Loading...
    </span>
  </label>
</div>
`;

exports[`Progress examples NovaErrorProgressBarProgressComponent should render correctly 1`] = `
<div>
  <progress
    class="v-progress v-progress-bar v-progress-error v-mb-8"
    determinate=""
    id="progress-bar-error"
    invalid=""
    max="100"
    percentage="0"
    v-progress-error=""
    v-progress-linear=""
    value="0"
  />
  <label
    class="v-progress-label"
    for="progress-bar-error"
    id="a-v-label-0"
    progresslabel=""
    v-label=""
  >
    <span
      class="v-gap-4 v-flex v-flex-row"
      role="alert"
      vflex=""
      vgap="4"
    >
      <svg
        aria-hidden="true"
        class="v-icon v-icon-error v-icon-tiny v-icon-visa"
        focusable="false"
        height="16"
        v-icon-visa-error-tiny=""
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          class="v-icon-secondary"
          d="M8 0C12.4183 0 16 3.58172 16 8C16 12.4183 12.4183 16 8 16C3.58172 16 0 12.4183 0 8C0 3.58172 3.58172 0 8 0ZM8 2C4.68629 2 2 4.68629 2 8C2 11.3137 4.68629 14 8 14C11.3137 14 14 11.3137 14 8C14 4.68629 11.3137 2 8 2Z"
        />
        <path
          class="v-icon-primary"
          d="M8 10C8.55228 10 9 10.4477 9 11C9 11.5523 8.55228 12 8 12C7.44772 12 7 11.5523 7 11C7 10.4477 7.44772 10 8 10ZM9 8H7V4H9V8Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
       This is required text that describes the error in more detail. 
    </span>
    <span
      class="v-ml-8"
      vml="8"
    >
      0%
    </span>
  </label>
</div>
`;

exports[`Progress examples NovaErrorProgressCircularProgressComponent should render correctly 1`] = `
<div>
  <span
    class="v-input-message v-input-error"
    role="alert"
  >
    <svg
      aria-hidden="true"
      class="v-icon v-icon-error v-icon-tiny v-icon-visa"
      focusable="false"
      height="16"
      v-icon-visa-error-tiny=""
      viewBox="0 0 16 16"
      width="16"
    >
      <path
        class="v-icon-secondary"
        d="M8 0C12.4183 0 16 3.58172 16 8C16 12.4183 12.4183 16 8 16C3.58172 16 0 12.4183 0 8C0 3.58172 3.58172 0 8 0ZM8 2C4.68629 2 2 4.68629 2 8C2 11.3137 4.68629 14 8 14C11.3137 14 14 11.3137 14 8C14 4.68629 11.3137 2 8 2Z"
      />
      <path
        class="v-icon-primary"
        d="M8 10C8.55228 10 9 10.4477 9 11C9 11.5523 8.55228 12 8 12C7.44772 12 7 11.5523 7 11C7 10.4477 7.44772 10 8 10ZM9 8H7V4H9V8Z"
      />
      <defs>
        <clippath>
          <rect
            height="16"
            width="16"
          />
        </clippath>
      </defs>
    </svg>
     This is required text that describes the error in more detail.

  </span>
</div>
`;

exports[`Progress examples NovaIndeterminateCircularProgressComponent should render correctly 1`] = `
<div>
  
  <div
    class="v-gap-12 v-flex v-flex-row v-mt-12"
    vflex=""
    vgap="12"
    vmt="12"
  >
    <button
      class="v-button"
      type="button"
      v-button=""
    >
      Start
    </button>
    <button
      buttoncolor="secondary"
      class="v-button v-button-secondary"
      type="button"
      v-button=""
    >
      Reset
    </button>
    <button
      buttoncolor="secondary"
      class="v-button v-button-secondary"
      type="button"
      v-button=""
    >
      
      <svg
        aria-hidden="true"
        class="v-icon v-icon-media-pause-alt v-icon-tiny v-icon-visa"
        focusable="false"
        height="16"
        v-icon-visa-media-pause-alt-tiny=""
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          class="v-icon-secondary"
          d="M8 0C12.4183 0 16 3.58172 16 8C16 12.4183 12.4183 16 8 16C3.58172 16 0 12.4183 0 8C0 3.58172 3.58172 0 8 0ZM8 2C4.68629 2 2 4.68629 2 8C2 11.3137 4.68629 14 8 14C11.3137 14 14 11.3137 14 8C14 4.68629 11.3137 2 8 2Z"
        />
        <path
          class="v-icon-primary"
          d="M7 11H5V5H7V11ZM11 11H9V5H11V11Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
      
       Pause 
    </button>
  </div>
</div>
`;

exports[`Progress examples NovaIndeterminateCircularProgressSmallComponent should render correctly 1`] = `
<div>
  
  <div
    class="v-gap-12 v-flex v-flex-row v-mt-12"
    vflex=""
    vgap="12"
    vmt="12"
  >
    <button
      class="v-button"
      type="button"
      v-button=""
    >
      Start
    </button>
    <button
      buttoncolor="secondary"
      class="v-button v-button-secondary"
      type="button"
      v-button=""
    >
      Reset
    </button>
    <button
      buttoncolor="secondary"
      class="v-button v-button-secondary"
      type="button"
      v-button=""
    >
      
      <svg
        aria-hidden="true"
        class="v-icon v-icon-media-pause-alt v-icon-tiny v-icon-visa"
        focusable="false"
        height="16"
        v-icon-visa-media-pause-alt-tiny=""
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          class="v-icon-secondary"
          d="M8 0C12.4183 0 16 3.58172 16 8C16 12.4183 12.4183 16 8 16C3.58172 16 0 12.4183 0 8C0 3.58172 3.58172 0 8 0ZM8 2C4.68629 2 2 4.68629 2 8C2 11.3137 4.68629 14 8 14C11.3137 14 14 11.3137 14 8C14 4.68629 11.3137 2 8 2Z"
        />
        <path
          class="v-icon-primary"
          d="M7 11H5V5H7V11ZM11 11H9V5H11V11Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
      
       Pause 
    </button>
  </div>
</div>
`;

exports[`Progress examples NovaIndeterminateProgressBarNoLabelProgressComponent should render correctly 1`] = `
<div>
  
  <div
    class="v-gap-12 v-flex v-flex-row v-mt-12"
    vflex=""
    vgap="12"
    vmt="12"
  >
    <button
      class="v-button"
      type="button"
      v-button=""
    >
      Start
    </button>
    <button
      buttoncolor="secondary"
      class="v-button v-button-secondary"
      type="button"
      v-button=""
    >
      Reset
    </button>
    <button
      buttoncolor="secondary"
      class="v-button v-button-secondary"
      type="button"
      v-button=""
    >
      
      <svg
        aria-hidden="true"
        class="v-icon v-icon-media-pause-alt v-icon-tiny v-icon-visa"
        focusable="false"
        height="16"
        v-icon-visa-media-pause-alt-tiny=""
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          class="v-icon-secondary"
          d="M8 0C12.4183 0 16 3.58172 16 8C16 12.4183 12.4183 16 8 16C3.58172 16 0 12.4183 0 8C0 3.58172 3.58172 0 8 0ZM8 2C4.68629 2 2 4.68629 2 8C2 11.3137 4.68629 14 8 14C11.3137 14 14 11.3137 14 8C14 4.68629 11.3137 2 8 2Z"
        />
        <path
          class="v-icon-primary"
          d="M7 11H5V5H7V11ZM11 11H9V5H11V11Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
      
       Pause 
    </button>
  </div>
</div>
`;

exports[`Progress examples NovaIndeterminateProgressBarProgressComponent should render correctly 1`] = `
<div>
  
  <div
    class="v-gap-12 v-flex v-flex-row v-mt-12"
    vflex=""
    vgap="12"
    vmt="12"
  >
    <button
      class="v-button"
      type="button"
      v-button=""
    >
      Start
    </button>
    <button
      buttoncolor="secondary"
      class="v-button v-button-secondary"
      type="button"
      v-button=""
    >
      Reset
    </button>
    <button
      buttoncolor="secondary"
      class="v-button v-button-secondary"
      type="button"
      v-button=""
    >
      
      <svg
        aria-hidden="true"
        class="v-icon v-icon-media-pause-alt v-icon-tiny v-icon-visa"
        focusable="false"
        height="16"
        v-icon-visa-media-pause-alt-tiny=""
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          class="v-icon-secondary"
          d="M8 0C12.4183 0 16 3.58172 16 8C16 12.4183 12.4183 16 8 16C3.58172 16 0 12.4183 0 8C0 3.58172 3.58172 0 8 0ZM8 2C4.68629 2 2 4.68629 2 8C2 11.3137 4.68629 14 8 14C11.3137 14 14 11.3137 14 8C14 4.68629 11.3137 2 8 2Z"
        />
        <path
          class="v-icon-primary"
          d="M7 11H5V5H7V11ZM11 11H9V5H11V11Z"
        />
        <defs>
          <clippath>
            <rect
              height="16"
              width="16"
            />
          </clippath>
        </defs>
      </svg>
      
       Pause 
    </button>
  </div>
</div>
`;

exports[`Progress examples NovaLiveCircularProgressComponent should render correctly 1`] = `
<div>
  <div
    aria-labelledby="live-circular"
    aria-valuenow="0"
    class="v-progress v-progress-circular v-progress-circular-small"
    determinate=""
    role="progressbar"
    small=""
    v-progress-circular=""
  >
    <svg
      class="v-progress-circular-track"
    >
      <circle
        class="v-progress-circular-background"
      />
      <circle
        class="v-progress-circular-bar"
        style="stroke-dasharray: 138.23007675795088; stroke-dashoffset: 138.23007675795088;"
      />
    </svg>
    <div
      class="v-progress-label v-typography-body-2-bold"
      id="live-circular"
      v-label=""
      vtypography="body-2-bold"
    >
      0%
    </div>
  </div>
  <span
    class="v-sr"
    role="alert"
    vsr=""
  >
    
  </span>
  <div
    class="v-gap-12 v-flex v-flex-row v-mt-12"
    vflex=""
    vgap="12"
    vmt="12"
  >
    <button
      class="v-button"
      type="button"
      v-button=""
    >
      Start
    </button>
    <button
      buttoncolor="secondary"
      class="v-button v-button-secondary"
      type="button"
      v-button=""
    >
      Reset
    </button>
  </div>
</div>
`;

exports[`Progress examples NovaLiveProgressBarProgressComponent should render correctly 1`] = `
<div>
  <progress
    class="v-progress v-progress-bar v-mb-8"
    determinate=""
    id="liveProgressBar"
    max="100"
    v-progress-linear=""
    value="0"
    vmb="8"
  />
  <label
    class="v-progress-label"
    for="liveProgressBar"
    id="a-v-label-0"
    progresslabel=""
    v-label=""
  >
    <span>
      Filename.jpg
    </span>
    <span>
      0%
    </span>
    <span
      class="v-sr"
      role="alert"
      vsr=""
    >
      
    </span>
  </label>
  <div
    class="v-gap-12 v-flex v-flex-row v-mt-12"
    vflex=""
    vgap="12"
    vmt="12"
  >
    <button
      class="v-button"
      type="button"
      v-button=""
    >
      Start
    </button>
    <button
      buttoncolor="secondary"
      class="v-button v-button-secondary"
      type="button"
      v-button=""
    >
      Reset
    </button>
  </div>
</div>
`;
